<resources>
    <string name="app_name">Vacation Tracker</string>
    <string name="main_title">Vacation Tracker</string>
    <string name="main_subtitle">Welcome to your Vacation Tracker! Tap the button below to get started.</string>
    <string name="main_footer">created by Nicole Fortin</string>

    <string name="vacation_list_title">Vacation List</string>
    <string name="loading_sample_data">Please wait...</string>
    <string name="search_hint">Search</string>
    <string name="search_vacation">Search Vacations...</string>
    <string name="search_not_found">No matching vacations</string>
    <string name="vacation_list_subtitle">Here is your current list of vacations.</string>
    <string name="card_title">Vacation Country</string>

    <string name="vacation_details_title">Vacation Details</string>
    <string name="vacation_details_excursion_list">Related Excursions</string>

    <string name="delete_vacation_title">Delete Vacation</string>
    <string name="delete_vacation_deny">Cannot Delete Vacation!</string>
    <string name="delete_vacation_exc">This vacation has excursions associated with it. Please delete all associated excursions first.</string>
    <string name="delete_confirm_message">You will not be able to recover this item. Are you sure you want to delete this item?</string>
    <string name="delete_ok">Delete</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_ack">OK</string>

    <string name="excursion_list_title">Excursion List</string>
    <string name="excursion_list_subtitle">Here is your current list of excursions.</string>
    <string name="excursion_details_title">Excursion Details</string>
    <string name="delete_excursion_title">Delete Excursion</string>
</resources>