<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".UI.VacationList"
    android:layout_margin="28dp">

    <TextView
        android:id="@+id/vacationListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/vacation_list_title"
        android:textColor="@color/Text"
        android:textSize="32sp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/vacationListSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/googlesans_regular"
        android:text="@string/vacation_list_subtitle"
        android:textColor="@color/Text"
        android:textSize="16sp"
        tools:layout_editor_absoluteY="69dp"
        app:layout_constraintTop_toBottomOf="@id/vacationListTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@+id/vacationListSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:queryHint="@string/search_hint"></androidx.appcompat.widget.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="105dp"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Accent"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="18dp"
        android:clickable="true"
        android:contentDescription="Add New Vacation"
        app:srcCompat="@drawable/plus"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>